--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -24,5 +24,5 @@ else
 }
 
 
-<p>@Html.ActionLink("Add new client", "Create", "Clients")</p>
+<p>@Html.ActionLink("Add a new client", "Create", "Clients")</p>
 <p>@Html.ActionLink("Back to list of stylists", "Index")</p>
