--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -18,7 +18,7 @@ else
   <ul>
     @foreach (Client client in Model.Clients)
     {
-      <li>@Html.ActionLink($"{client.ClientName}", "Details", "Clients", new { ClientId = client.ClientId })</li>
+      <li>@Html.ActionLink($"{client.ClientName}", "Details", "Clients", new { id = client.ClientId })</li>
     }
   </ul>
 }
