--- a/HairSalon/Views/Clients/Details.cshtml
+++ b/HairSalon/Views/Clients/Details.cshtml
@@ -7,6 +7,9 @@
 <h2>Client Details</h2>
 <hr />
 <h3>Client: @Html.DisplayFor(model => model.ClientName)</h3>
+<h3>Client Note:@Html.DisplayFor(model => model.ClientNote)</h3>
 <h3>@Html.DisplayNameFor(model => model.Stylist): @Html.DisplayFor(model => model.Stylist.StylistName)</h3>
 
 <p>@Html.ActionLink("Edit Client Information", "Edit", new { id = Model.ClientId })</p>
+<p>@Html.ActionLink("Delete Client", "Delete", new { id = Model.ClientId })</p>
+<p>@Html.ActionLink("Back to list of clients", "Index")</p>
