--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -16,8 +16,12 @@ else
   <ul>
     @foreach (Client client in Model)
     {
-      <li>@Html.ActionLink($"{client.ClientName}", "Details", new { clientId = client.ClientId }) | @client.Stylist.StylistName</li>
+      <li>@Html.ActionLink($"{client.ClientName}", "Details", new { id = client.ClientId }) | @client.Stylist.StylistName</li>
     }
   </ul>
 }
+
+<p>@Html.ActionLink("Add new client", "Create")</p>
+<p>@Html.ActionLink("Add a new stylist", "Create", "Stylists")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
 
