add delete link

--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -23,6 +23,6 @@ else
   </ul>
 }
 
-
+<p>@Html.ActionLink("Delete Stylist", "Delete", new { id = Model.StylistId })</p>
 <p>@Html.ActionLink("Add a new client", "Create", "Clients")</p>
 <p>@Html.ActionLink("Back to list of stylists", "Index")</p>
