--- a/HairSalon/Views/Stylists/Delete.cshtml
+++ b/HairSalon/Views/Stylists/Delete.cshtml
@@ -5,8 +5,9 @@
 @model HairSalon.Models.Stylist
 
 <h2>Are you sure you want to delete this stylist from the system?</h2>
-
-@Html.DisplayNameFor(model => model.StylistName): @Html.DisplayFor(model => model.StylistName)
+<hr />
+<h3>@Html.DisplayFor(model => model.StylistName)</h3>
+<hr />
 @using (Html.BeginForm())
 {
   <input type="submit" value="Delete" />
